[gd_scene load_steps=6 format=3 uid="uid://d1xfhhdbfsst"]

[ext_resource type="Script" uid="uid://ddxa5unte5tel" path="res://Scripts/tower_menu.gd" id="1_on2a2"]
[ext_resource type="Texture2D" uid="uid://cnlkrt3od8e0" path="res://graphics/ui/close_normal.png" id="2_71s0o"]
[ext_resource type="FontFile" uid="uid://bqm53gushpubk" path="res://graphics/ui/Digitalt.otf" id="2_i8h0h"]
[ext_resource type="Texture2D" uid="uid://0co0sik7sq0v" path="res://graphics/ui/close_hover.png" id="3_o7e2i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i8h0h"]
bg_color = Color(0.15294118, 0.15294118, 0.15294118, 1)

[node name="TowerMenu" type="Control" groups=["TowerCard"]]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
script = ExtResource("1_on2a2")

[node name="SellButton" type="TextureButton" parent="."]
modulate = Color(0.82977676, 0.67999977, 0.22582948, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -40.0
offset_right = 40.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("2_71s0o")
texture_pressed = ExtResource("2_71s0o")
texture_hover = ExtResource("3_o7e2i")

[node name="UpgradeButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -66.0
offset_top = 40.0
offset_right = 66.0
offset_bottom = 25.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_i8h0h")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_i8h0h")
text = "Upgrade(30)"

[connection signal="pressed" from="SellButton" to="." method="_on_sell_button_pressed"]
[connection signal="pressed" from="UpgradeButton" to="." method="_on_upgrade_button_pressed"]
